assets/css/style.css
#moduleheader {
    width: 100%;
    min-width: 918px;
    padding: 0;
    margin: 0;
    /* height: 35px;
     border-bottom: 1px solid #2F5376; */
    clear: both;
}

fieldset {
    border: 1px solid #778;
    margin: 1em 0;
    text-align: left;
    background-color: transparent;
}

h1, h2, h3, h4, h5 {
    margin: 0;
}

h4 a img {
    -moz-opacity: .4;
    filter: alpha(opacity=40);
}

h4 a:hover img {
    -moz-opacity: 1;
    filter: alpha(opacity=100);
}

.leftheader {
    font-size: 12px;
    line-height: 18px;
    font-weight: bold;
    margin: 5px;
    display: inline-block;
    float: left;
    padding: 10px;
}

.rightheader {
    font-size: 18px;
    text-align: right;
    font-weight: bold;
    color: #000;
    letter-spacing: 1.5px;
    margin: 5px;
    line-height: 18px;
    vertical-align: top;
    display: inline-block;
    float: right;
    padding: 10px;
}

.empty {
    border: 2px solid #ccc;
    padding: 24px;
    margin: 8px 0;
    color: #900;
    font-size: 14px;
    text-align: center;
    clear: both;
}

.rss_bottom {
    padding: 24px;
    text-align: center;
    clear: both;
}

.toprow {
    margin-top: 12px;
    vertical-align: middle;
    clear: both;
}

#search {
    float: left;
    width: 40%;
    margin: 10px;
    vertical-align: middle;
    /* border: 1px dotted #e2a35c; */
    display: inline-block;
}

.searchBox {
    background-image: url('images/magnifier.gif');
    background-repeat: no-repeat;
    padding-left: 20px;
    font-family: Arial, verdana, helvetica, sans-serif;
    font-size: small;
    color: #666;
}

fieldset {
    margin-bottom: 10px;
}

fieldset ul {
    list-style-type: square;
    list-style-position: outside;
    line-height: 120%;
}

legend {
    color: #900;
}

.inventory {
    text-align: center;
    line-height: 150%;
    margin: 10px;
    width: 40%;
    vertical-align: middle;
    /* border: 1px dotted #e2a35c;  */
    display: inline-block;
    float: right;
}

.clearer {
    clear: both;
    width: 100%;
    text-align: center;
    vertical-align: middle;
}

.clearer2 {
    clear: both;
    width: 99.9%;
    margin-top: 8px;
}

.letters {
    text-align: center;
    font-size: 14px;
    padding: 10px 0;
    color: #900;
}

.search_abc_l {
    text-align: center;
    font-size: 12px;
    padding: 10px 0;
    color: #900;
    width: 10%;
    vertical-align: middle;
    display: inline-block;
    float: left;
    letter-spacing: 1.5px;
}

.search_abc_r {
    text-align: center;
    font-size: 12px;
    padding: 10px 0;
    color: #900;
    width: 10%;
    vertical-align: middle;
    display: inline-block;
    float: right;
    letter-spacing: 1.5px;
}

.search_abc_c {
    text-align: center;
    font-size: 12px;
    padding: 10px 0;
    color: #900;
    vertical-align: middle;
    width: 80%;
    display: inline-block;
}

.introcen {
    text-align: center;
    font-size: small;
    padding: 4px 0 0 0;
}

.float30 {
    float: left;
    width: 32%;
    margin-right: 10px;
    border: 0 solid #ccc;
    vertical-align: middle;
    display: inline-block;
}

.float30random {
    float: right;
    width: 33%;
    margin-left: 0;
    border: 0 solid #ccc;
}

.catname {
    font-size: 12px;
    font-weight: bold;
    background-color: #ccc;
    padding: 1px 4px;
    margin: 4px;
}

.catname_min {
    font-size: 10px;
    font-weight: bold;
    padding: 1px 4px;
    margin: 4px;
}

.randterm {
    padding: 4px;
    color: #456;
}

.submission {
    padding: 12px;
    margin: 0;
    color: #234;
}

.request {
    padding: 0 12px 12px 12px;
    margin: 0;
    color: #234;
}

h2.cat {
    text-align: center;
    margin: 0;
    color: #2F5376;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1.5px;
}

h3.cat {
    text-align: center;
    margin: 10px 0 0 0;
    color: #2F5376;
}

h4.term, h5.term {
    color: #456;
    margin: 0 0 4px 0;
    margin-bottom: 12px;
}

h4.term, h5.term a img {
    -moz-opacity: .4;
    filter: alpha(opacity=40);
}

h4.term, h5.term a:hover img {
    -moz-opacity: 1;
    filter: alpha(opacity=100);
}

.catsearch {
    text-align: left;
    margin: 10px 0 0 0;
    color: #2F5376;
}

.definition {
    margin-left: 12px;
    color: #456;
    line-height: 140%;
}

.result {
    margin-left: 24px;
    color: #567;
    margin: 4px 0 12px 18px;
}

.intro {
    margin: 2px 0 8px 0;
    line-height: 160%;
    font-size: 14px;
    text-align: center;
    font-weight: bold;
}

.catback {
    background-color: #ccc;
    padding: 4px;
    margin: 4px 0 12px 0;
    border-bottom: 1px solid #000;
}

p {
    padding: 0;
    color: #234;
    line-height: 130%;
    margin: 0;
}

.small {
    padding-left: 30px;
    color: #234;
    line-height: 130%;
    margin: 0 0 6px 0;
    font-size: small;
}

.xsmall {
    padding-left: 30px;
    padding-bottom: 10px;
    color: #234;
    line-height: 130%;
    margin: 0 0 6px 0;
    font-size: x-small;
}

.xxsmall {
    color: #234;
    line-height: 130%;
    margin: 0 0 6px 0;
    padding-left: 30px;
    font-size: xx-small;
}

.blocksmall {
    font-size: xx-small;
    display: block;
    color: #456;
    margin-bottom: 4px;
}

.nopadding {
    padding: 0;
    color: #456;
    line-height: 110%;
    margin: 0;
    font-size: small;
}

.pad4 {
    padding: 4px;
    margin: 0;
}

.pad5 {
    padding: 3px;
    margin: 3px;
    text-align: center;
}

.btnDefault {
    margin: 2px 0;
    font-family: Arial, verdana, helvetica, sans-serif;
    width: auto;
}

.entryfooter {
    width: 98%;
    padding: 4px;
    margin: 5px;
    border-top: 1px solid silver;
    border-bottom: 1px solid silver;
}

.standard {
    font-size: 11px;
    line-height: 15px;
}

.teaser {
    border: 2px dotted #e2a35c;
    padding: 24px;
    margin: 8px 0;
    color: #000000;
    font-size: 14px;
    text-align: center;
    clear: both;
}

/* layout categoryimage*/
img.floatLeft {
    float: left;
    margin: 0 0 0 0;
    border: 0;
    overflow: hidden;
}

img.navig {
    vertical-align: middle;
}

/* Bookmark tags */
div.socbookmark a img {
    -moz-opacity: .4;
    filter: alpha(opacity=40);
}

div.socbookmark a:hover img {
    -moz-opacity: 1;
    filter: alpha(opacity=100);
}

#category td {
    padding: 2px 4px;
    text-align: left;
    font-size: 12px;
    font-variant: normal;
    font-weight: normal;
    vertical-align: top;
    white-space: normal;
}

#Lxcategory td {
    padding: 2px 0; /* need more space?*/
    text-align: left;
    font-size: 10px;
    font-variant: normal;
    font-weight: normal;
    vertical-align: top;
    white-space: normal;
}

/*****************************************
 truncate styles
******************************************/

.table-truncate {
    position: relative;
}

.table-truncate__body {
    position: absolute;
    max-width: 95%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/*****************************************
 just some design styles
******************************************/
body {
    font-family: 'helvetica neue', 'arial', sans-serif;
    background: #262626;
}

table {
    width: 100%;
    border-collapse: collapse;
    color: #262626;
    background: #99AFF2;
}

td {
    padding: 25px;
    border: 4px solid #262626;
}

.td--1 {
    width: 20%;
}

.td--2 {
    width: 30%;
}

.td--3 {
    width: 50%;
    vertical-align: top;
}

